force-app/main/default/objects/User__c/fields/AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>AddressLine2__c</fullName>
    <label>AddressLine2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>