force-app/main/default/objects/User__c/fields/Contactnumber__c.field-meta.xml
<CustomField>
    <fullName>Contactnumber__c</fullName>
    <label>Contactnumber</label>
    <length>10</length>
    <type>Text</type>
</CustomField>