force-app/main/default/objects/User__c/fields/Scanswer__c.field-meta.xml
<CustomField>
    <fullName>Scanswer__c</fullName>
    <label>Scanswer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>