force-app/main/default/objects/User__c/fields/Scquestion__c.field-meta.xml
<CustomField>
    <fullName>Scquestion__c</fullName>
    <label>Scquestion</label>
    <length>20</length>
    <type>Text</type>
</CustomField>