force-app/main/default/objects/User__c/fields/zipcode__c.field-meta.xml
<CustomField>
    <fullName>zipcode__c</fullName>
    <label>zipcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>